# People.AI-Data-Generator

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODO.md  demo.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_dev.sh  verify_install.py
src/demo_gen/: __init__.py  activity_planner.py  cli.py  config.py  content_gen.py  logger.py  runner.py  scorecard_client.py  sf_client.py  state_store.py
tests/: __init__.py  test_activity_planner.py  test_config.py
